--- a/Thesis_Research (python)/Photometry/config.yaml
+++ b/Thesis_Research (python)/Photometry/config.yaml
@@ -4,13 +4,9 @@
 
 Directory_Information:
   #Parent folder where your data folders are located (It is highly suggested to separate by groups)
-<<<<<<< HEAD
-  project_home: "E:/Photometry-Fall2022/New_code_tester/V. Males Non-Attacking"
+  project_home: "C:/Users/sedwi/Documents/Labmeeting_test_files/Mated_females"
   #Provide an example behavior file that is representative of those in your data folders. It is important that it includes the relavent behaviors.
-  example_behavior_file: "E:/Photometry-Fall2022/New_code_tester/V. Males Non-Attacking/27/Raw data-Pup Block 2-Trial     3 (2).xlsx"
-=======
-  project_home: C:/Users/sedwi/Desktop/New_code_tester/V. Males Non-Attacking
->>>>>>> 2ecdc1a (Updated photometry folder)
+  example_behavior_file: "c:/Users/sedwi/Documents/Labmeeting_test_files/Mated_females/26/Raw data-Mated Pup Exposure-Trial    27.xlsx"
 
 Acquisition_Information: 
   behaviorvideo_fps: 30
@@ -19,6 +15,7 @@ Acquisition_Information:
   peri-baseline_seconds: 5
   peri-event_seconds: 10
 
+  #Turn on silent mode? This turns off supervision. Analysis is faster, but can lead to improper LED assignment.
   silent_mode: off
 
   #What signal ROI is being analyzed (e.g. 0-9 based on column order. If column is Region0G input 0)
